1.升级阿里云api 2.0.3 2.修改 maven 项目结构，路径错误，获取不到文件错误

--- a/ueditor/pom.xml
+++ b/ueditor/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.qikemi.packages.ueditor</groupId>
 	<artifactId>ueditor</artifactId>
@@ -26,8 +25,9 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>3.0-alpha-1</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.json</groupId>
@@ -36,9 +36,9 @@
 		</dependency>
 		<!-- aliyun-openservices -->
 		<dependency>
-			<groupId>com.aliyun.openservices</groupId>
-			<artifactId>aliyun-openservices</artifactId>
-			<version>1.2.3</version>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+			<version>2.0.3</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
