--- a/ueditor/src/main/resources/OSSKey.properties
+++ b/ueditor/src/main/resources/OSSKey.properties
@@ -1,10 +1,10 @@
 # ALIYUN OSSClient Configure 
 useStatus=true
-bucketName=bucketmy-bucket-nameamesdfswers
-key=75W7vDuyu04e1XYS
-secret=fwOYKBtLrH67tqOFFahqKUVFfHFSXX
-## endPoint=http://images.qikemi.com/
-endPoint=http://images.qikemi.com/
+bucketName=bszhongshen
+key=pX5hDOIYZ8O0TPg7
+secret=pfq4liTYnv0yEqpuqjoWogAeLjpg66
+## endPoint=http://oss-cn-hangzhou.aliyuncs.com/
+endPoint=http://image.bossonz.com/
 # 用户代理，指HTTP的User-Agent头。默认为”aliyun-sdk-java”
 userAgent=
 # 代理服务器主机地址
