--- a/ueditor/src/main/webapp/WEB-INF/web.xml
+++ b/ueditor/src/main/webapp/WEB-INF/web.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <servlet>
-    <display-name>upload</display-name>
-    <servlet-name>upload</servlet-name>
-    <servlet-class>com.qikemi.packages.junit.ueditor.JunitUeditor</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>upload</servlet-name>
-    <url-pattern>/upload</url-pattern>
-  </servlet-mapping>
+<!--   <servlet> -->
+<!--     <display-name>upload</display-name> -->
+<!--     <servlet-name>upload</servlet-name> -->
+<!--     <servlet-class>com.baidu.ueditor.upload.Uploader</servlet-class> -->
+<!--   </servlet> -->
+<!--   <servlet-mapping> -->
+<!--     <servlet-name>upload</servlet-name> -->
+<!--     <url-pattern>/upload</url-pattern> -->
+<!--   </servlet-mapping> -->
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
