oss服务地址问题

--- a/ueditor/src/main/resources/OSSKey.properties
+++ b/ueditor/src/main/resources/OSSKey.properties
@@ -1,10 +1,11 @@
 # ALIYUN OSSClient Configure 
 useStatus=true
-bucketName=bszhongshen
+bucketName=xxxxxx
 key=pX5hDOIYZ8O0TPg7
-secret=pfq4liTYnv0yEqpuqjoWogAeLjpg66
+secret=
 ## endPoint=http://oss-cn-hangzhou.aliyuncs.com/
-endPoint=http://image.bossonz.com/
+endPoint=http://oss-cn-shenzhen.aliyuncs.com
+host=http://image.xxx.com
 # 用户代理，指HTTP的User-Agent头。默认为”aliyun-sdk-java”
 userAgent=
 # 代理服务器主机地址
